--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -35,6 +35,7 @@
   padding: 10px;
   color: #ebd8ff;
   border-radius: 10px;
+  transition: color 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .navLink:hover,
@@ -46,7 +47,7 @@
 .img {
   height: 60px;
   border-radius: 20px;
-  filter: drop-shadow(0 0 2em #5cd3a8);
+  filter: drop-shadow(0 0 20px #5cd3a8);
 }
 
 .img:hover,
