--- a/src/components/LoadMore/LoadMore.module.css
+++ b/src/components/LoadMore/LoadMore.module.css
@@ -11,11 +11,11 @@
   line-height: 1.2;
   text-transform: uppercase;
   color: #373737;
+  transition: background-color 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .loadMore:hover,
 .loadMore:focus {
   background-color: #5cd3a8;
   scale: 1.1;
-  margin: 0 auto;
 }
