--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -1,8 +1,7 @@
 .container {
-  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(146, 117, 173);
+  background-color: #8a71a5;
 }
