--- a/src/components/UserCard/UserCard.module.css
+++ b/src/components/UserCard/UserCard.module.css
@@ -9,12 +9,11 @@
   );
   box-shadow: -2.5777px 6.87386px 20.6216px rgba(0, 0, 0, 0.23);
   border-radius: 20px;
-  will-change: filter;
-  transition: filter 300ms;
+  transition: filter 400ms linear;
 }
 
 .userCard:hover .picture {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 20px #646cffaa);
   animation: rotate infinite 1s linear;
 }
 
@@ -88,19 +87,7 @@
   align-items: center;
 }
 
-.userName {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.2;
-  text-transform: uppercase;
-  color: #ebd8ff;
-  margin-bottom: 16px;
-}
 .userTweets {
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -110,8 +97,6 @@
 }
 
 .userFollowers {
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -122,7 +107,6 @@
 
 .userToggleFollow {
   width: 196px;
-  background-color: #ebd8ff;
   box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
   border-radius: 10.3108px;
   padding: 14px 28px;
@@ -133,6 +117,7 @@
   line-height: 1.2;
   text-transform: uppercase;
   color: #373737;
+  transition: box-shadow 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .userToggleFollow:hover,
