--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 :root {
   font-family: Montserrat, Inter, system-ui, Avenir, Helvetica, Arial,
     sans-serif;
+  font-style: normal;
   line-height: 1.2;
   font-weight: 500;
 
