--- a/src/pages/Tweets/Tweets.module.css
+++ b/src/pages/Tweets/Tweets.module.css
@@ -1,5 +1,6 @@
 .tweetsContainer {
-  padding: 30px;
+  width: 100%;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,10 +9,11 @@
 
 .goBack {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 50px;
+  left: 60px;
   border-radius: 50%;
   padding: 5px;
+  transition: box-shadow 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 .goBack:hover,
